--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.2
+  flutter_secure_storage: ^3.3.1+1
+  provider: ^4.0.4
 
 dev_dependencies:
   flutter_test:
