--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_secure_storage: ^3.3.1+1
   provider: ^4.0.4
+  http: ^0.12.0+4
 
 dev_dependencies:
   flutter_test:
