--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,10 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.2
   flutter_secure_storage: ^3.3.1+1
-  provider: ^4.0.4
+  flutter_speed_dial: ^1.2.5
   http: ^0.12.0+4
+  provider: ^4.0.4
+  shared_preferences: ^0.5.6+3
 
 dev_dependencies:
   flutter_test:
