remove dart container

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,8 @@ jobs:
     needs: build-number
     runs-on: ubuntu-latest
 
-    container:
-      image: google/dart:latest
+    # container:
+    #   image: google/dart:latest
 
     steps:
       - name: Download build number
