--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,9 +23,6 @@ jobs:
     needs: build-number
     runs-on: ubuntu-latest
 
-    # container:
-    #   image: google/dart:latest
-
     steps:
       - name: Download build number
         uses: actions/download-artifact@v1
@@ -41,9 +38,18 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
+      - name: Restore keystore
+        run: echo $SIGNING_KEY | base64 -d > android/app/key.jks
+        env:
+          SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
       - name: Set build number
         run: |
           sed -i -e "1,/+1/s/+1/+$BUILD_NUMBER/" pubspec.yaml
       - run: flutter pub get
       # - run: flutter test
       - run: flutter build appbundle
+        env:
+          KEY_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          ALIAS: ${{ secrets.ALIAS }}
+          KEY_PATH: key.jks
