--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,3 +53,9 @@ jobs:
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           ALIAS: ${{ secrets.ALIAS }}
           KEY_PATH: key.jks
+      - uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: ${{ SERVICE_ACCOUNT_JSON }}
+          packageName: com.sliceitapp.sliceit
+          releaseFile: /build/app/outputs/bundle/release/app-release.aab
+          track: internal
