--- a/android/.gitignore
+++ b/android/.gitignore
@@ -6,3 +6,5 @@ gradle-wrapper.jar
 /local.properties
 /key.properties
 GeneratedPluginRegistrant.java
+# Firebase configuration file
+/app/google-services.json
