--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,12 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.2
+  flutter_dotenv: ^2.1.0
   flutter_secure_storage: ^3.3.1+1
   flutter_speed_dial: ^1.2.5
   http: ^0.12.0+4
   provider: ^4.0.4
+  sentry: ">=3.0.0 <4.0.0"
   shared_preferences: ^0.5.6+3
 
 dev_dependencies:
@@ -48,6 +50,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
