--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,13 +20,15 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.2
+  dio: ^3.0.9
+  dio_flutter_transformer: ^3.0.2
   flutter_dotenv: ^2.1.0
   flutter_secure_storage: ^3.3.1+1
   flutter_speed_dial: ^1.2.5
-  http: ^0.12.0+4
   provider: ^4.0.4
   sentry: ">=3.0.0 <4.0.0"
   shared_preferences: ^0.5.6+3
+  tuple: ^1.0.3
 
 dev_dependencies:
   flutter_test:
