--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,18 +17,25 @@ environment:
   sdk: ">=2.3.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
+  app_review: ^1.1.0+1
+  cached_network_image: ^2.1.0+1
   cupertino_icons: ^0.1.2
   dio: ^3.0.9
   dio_flutter_transformer: ^3.0.2
+  flutter:
+    sdk: flutter
   flutter_dotenv: ^2.1.0
   flutter_secure_storage: ^3.3.1+1
   flutter_speed_dial: ^1.2.5
+  image_cropper: ^1.2.1
+  image_picker: ^0.6.5
+  mime: ^0.9.6+3
+  package_info: ">=0.4.0+16 <2.0.0"
   provider: ^4.0.4
   sentry: ">=3.0.0 <4.0.0"
   shared_preferences: ^0.5.6+3
   tuple: ^1.0.3
+  url_launcher: ^5.4.2
 
 dev_dependencies:
   flutter_test:
