--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^2.1.0
+  flutter_platform_widgets: ^0.32.5
   flutter_secure_storage: ^3.3.1+1
   flutter_speed_dial: ^1.2.5
   image_cropper: ^1.2.1
