--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_speed_dial: ^1.2.5
   image_cropper: ^1.2.1
   image_picker: ^0.6.5
+  intl: ^0.16.1
   mime: ^0.9.6+3
   package_info: ">=0.4.0+16 <2.0.0"
   provider: ^4.0.4
